# Odin

./: Cargo.toml  README.md
.github/workflows/: rust.yml
api/: Gemfile
api/app/controllers/: application_controller.rb  graphql_controller.rb
api/app/graphql/: identity_schema.rb
api/app/graphql/mutations/: base_mutation.rb  login_mutation.rb  record_fingerprint_mutation.rb  register_mutation.rb  verify_session_mutation.rb
api/app/graphql/types/: base_field.rb  login_attempt_type.rb  mutation_type.rb  node_type.rb  query_type.rb  risk_assessment_type.rb  session_type.rb  user_type.rb
api/app/models/: device_fingerprint.rb  login_attempt.rb  session.rb  user.rb
api/app/services/: risk_assessment_service.rb  security_analyzer_service.rb
api/app/workers/: risk_assessment_worker.rb  security_monitoring_worker.rb  session_cleanup_worker.rb
client-sdks/web/: package.json
detection-engine/: Cargo.toml
detection-engine/src/: main.rs
detection-engine/src/models/: access_metadata.rs  device_fingerprint.rs  login_attempt.rs  mod.rs  risk_score.rs
src/: config.rs  lib.rs
src/alerting/: mod.rs
src/detection/: context.rs  mod.rs  rate_limiter.rs  rule_geo_velocity.rs
src/geolocation/: mod.rs
src/input/: file_tailer.rs  mod.rs  syslog_listener.rs
src/models/: event.rs  mod.rs
src/output/: mod.rs
src/persistence/: mod.rs  schema.sql  sqlite_store.rs
